resume link added

--- a/src/template.html
+++ b/src/template.html
@@ -87,7 +87,7 @@
                 projects that i've worked on. Please feel free to scroll through my website.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="src/assets/resume.pdf">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/open?id=1tvs3onS4mfRzMqLJkNrQdljoEGqRQ3YK">
                   View Resume
                 </a>
               </span>
